# delfa-bridge-core

./: .dockerignore  .env.example  .gitignore  AUDIT_DOCYAN_REPO_2026-05-28.md  CLAUDE.md  DEPLOYMENT.md  DelfaBridge_Blueprint_v1.md  DelfaBridge_Blueprint_v2.md  Dockerfile  README.md  docker-compose.yml  fly.graph.toml  fly.toml  mcp_config.json  package-lock.json  package.json  pyproject.toml  requirements.docker.txt  requirements.test.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py  mcp_server.py
app/_legacy/: __init__.py  whatsapp_reference.py
app/api/: auth.py  main.py
app/cache/: redis_client.py
app/connectors/: api_base.py  aspel.py  (+35 more)
docs/: DOCYAN_Adenda_Alcance_MVP_ConsultaViva.md  Plan_Desarrollo_MVP_DOCYAN_v2_postPoC.md  TODO_B0.7_service_role_en_B2.md  adenda_postPoC_28mayo2026.md  connectors_inventory.md  cotizador.md  dkg_ontology.md  dkg_topology.md  ingest_sources_inventory.md  no-devs-guide.md  quickstart.md  runbook_deploy_worker.md  runbook_secrets_produccion.md  schemas_documentales.md  worker_architecture.md
embedder/: Dockerfile  fly.toml  main.py  requirements.txt
frontend/: .eslintrc.json  .gitignore  eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
migrations/: 001_users_and_refresh_tokens.sql  002_documents.sql  003_entities.sql  004_audit_trail.sql  005_governance_rules.sql  006_quarantine.sql  007_api_keys.sql  008_tenant_budget.sql  009_tenant_schemas.sql
redis/: Dockerfile  README.md  fly.toml  redis.conf
scripts/: backup_falkordb.sh  falkordb_backup.py  preflight_worker.py  rename_panohayan_to_docyan.sh  restore_falkordb.sh  smoke_gemini.py  smoke_test_backend.py  smoke_test_ingesta.py  sync-docker-reqs.sh
tests/: conftest.py  test_admin_router.py  test_auth.py  test_connectivity.py  test_consulta_realizada_persisted.py  test_cors.py  test_cotizador_baselines.py  test_cotizador_budget_insufficient.py  test_cotizador_no_bypass_integration.py  test_cotizador_requires_confirmation.py  test_dedup_with_fuzzy.py  test_dii.py  test_dispatcher_job_flow.py  test_dkg_client_connection.py  test_dkg_create_entity.py  test_dkg_create_tenant.py  test_dkg_ontology.py  test_dkg_tenant_isolation.py  test_dkg_versioning.py  test_edb.py  test_embedder_service.py  test_genai_client_lazy.py  test_graph_backup_restore.py  test_ingest_pdf_manual_tecnico.py  test_ingest_pdf_msds.py  test_ingest_sources_router.py  test_intent.py  test_migrations.py  test_mr.py  test_ri.py  test_schema_generator_dinamico.py  test_schema_registry.py  test_schema_selector.py  test_sdk_uses_bge_m3.py  test_sql_connector.py  test_supabase_config.py  test_worker_deployment.py
worker/: Dockerfile  __init__.py  fly.toml  ingest_pipeline.py  llm_config.py  main.py  requirements.txt
(+88 files in other folders)
